[gd_scene load_steps=3 format=3 uid="uid://dbbnuqiytwitg"]

[ext_resource type="Script" uid="uid://biws0ccrppwmk" path="res://scenes/website_info/website_info.gd" id="1_hda6u"]
[ext_resource type="CodeHighlighter" uid="uid://bhocitbp2vsf1" path="res://resources/html_code_highlighter.tres" id="2_aej5j"]

[node name="WebsiteInfo" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hda6u")
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DomainListContainer" type="ScrollContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="DomainSelectorList" type="Tree" parent="HBoxContainer/DomainListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AddressLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Address:"
horizontal_alignment = 2

[node name="AddressLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PublicIpLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Public IP:"
horizontal_alignment = 2

[node name="PublicIpLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Port:"
horizontal_alignment = 2

[node name="PortLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="LocalIpLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Local IP:"
horizontal_alignment = 2

[node name="LocalIpLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeNetLabel" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Type:"
horizontal_alignment = 2

[node name="TypeNetLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="WebCodeEdit" type="CodeEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
scroll_smooth = true
minimap_draw = true
syntax_highlighter = ExtResource("2_aej5j")
highlight_all_occurrences = true
highlight_current_line = true
line_folding = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
